Add JetEngine support and refactor Options Pages to reduce duplication
- Added JetEngine to options page doc
- Replaced provider sections with a table
- Consolidated examples into integration-agnostic “Common Examples” to reduce duplication
- Clarified slug requirement for Meta Box and JetEngine in Common Examples and Troubleshooting
- Simplified the Dynamic Data page's “Options Keys” section to avoid having to keep multiple places updated

--- a/docs/docs/integrations/custom-fields/options-pages.mdx
+++ b/docs/docs/integrations/custom-fields/options-pages.mdx
@@ -24,24 +24,21 @@ Use the `options` key with the provider namespace that owns your options page fi
 {options.provider.field_name}
 ```
 
-- Available now: **Advanced Custom Fields (ACF)** via `options.acf.*`, **Meta Box** via `options.metabox.*`
-- Planned: **Etch Options** via `options.etch.*`
-
 Works globally (templates, pages, loops, headers/footers, etc.). No post context is required.
 
-## Plugin-Specific Usage
+## Quick Reference
 
-### Advanced Custom Fields (ACF)
-
-Use the `acf` namespace to access options page fields, e.g., `options.acf.field_name`.
-
-### Meta Box
-
-Use the `metabox` namespace to access options page fields, e.g., `options.metabox.field_id`.
+| Integration | Namespace   | Syntax example                                   |
+| ----------- | ----------- | -------------------------------------------------------- |
+| ACF         | `acf`       | `{options.acf.field_name}`                               |
+| Meta Box    | `metabox`   | `{options.metabox.option_page_slug.field_name}`          |
+| JetEngine   | `jetengine` | `{options.jetengine.option_page_slug.field_name}`        |
 
 ## Common Examples
 
-These examples work with any provider. Replace `provider` with `acf`, `metabox`, etc.
+These examples are provider-agnostic. Replace `provider` with the integration namespace (e.g., `acf`, `metabox`, `jetengine`). 
+
+**Note:** Meta Box and JetEngine require an option page slug in the path (e.g., `options.metabox.my_options.field_name`).
 
 ### Basic Fields
 
@@ -78,93 +75,6 @@ These examples work with any provider. Replace `provider` with `acf`, `metabox`,
 </ul>
 ```
 
-### Meta Box
-
-#### Accessing Option Values
-
-```html
-{options.acf.business_email}
-```
-
-- Replace `business_email` with your ACF field name/key defined on the ACF Options Page.
-
-#### Common Examples
-
-##### Basic Fields
-```html
-<a href="mailto:{options.acf.business_email}">{options.acf.business_email}</a>
-<a href="{options.acf.facebook_url}">Facebook</a>
-```
-
-##### Group Fields
-```html
-<div class="address">
-  <div>{options.acf.address.street}</div>
-  <div>{options.acf.address.city}, {options.acf.address.state} {options.acf.address.zip}</div>
-</div>
-```
-
-##### Image Fields
-```html
-<img src="{options.acf.logo.url}" alt="{options.acf.logo.alt}" />
-```
-
-##### Repeater Fields
-```html
-<ul class="hours">
-  {#loop options.acf.hours as hour}
-    <li>
-      <span class="day">{hour.day}</span>
-      <span class="time">{hour.open}–{hour.close}</span>
-    </li>
-  {/loop}
-</ul>
-```
-
-### Meta Box
-
-#### Accessing Option Values
-
-```html
-{options.metabox.option_page_name.field_name}
-```
-
-- Replace `option_page_name` with your Settings Page ID or Option name defined on the Meta Box Settings Page.
-- Replace `field_name` with your Meta Box field name/key defined on the Meta Box Custom Fields page.
-
-#### Common Examples
-
-##### Basic Fields
-```html
-<a href="mailto:{options.metabox.company.business_email}">{options.metabox.company.business_email}</a>
-<a href="{options.metabox.company.facebook_url}">Facebook</a>
-```
-
-##### Group Fields
-```html
-<div class="address">
-  <div>{options.metabox.company.address.street}</div>
-  <div>{options.metabox.company.address.city}, {options.metabox.company.address.state} {options.metabox.company.address.zip}</div>
-</div>
-```
-
-##### Image Fields
-```html
-<img src="{options.metabox.company.logo.url}" alt="{options.metabox.company.logo.alt}" />
-```
-
-##### Repeater Fields
-```html
-<ul class="hours">
-  {#loop options.metabox.company.hours as hour}
-    <li>
-      <span class="day">{hour.day}</span>
-      <span class="time">{hour.open}–{hour.close}</span>
-    </li>
-  {/loop}
-</ul>
-```
-
 ### Notes
 
 - Ensure an Option Page exists and fields are assigned to it.
@@ -178,5 +88,6 @@ If `{options._._}` outputs nothing:
   - Verify the field name/key matches exactly.
   - Check that the field has a saved value.
   - Ensure an Options Page exists in your chosen provider and fields are assigned to it.
+  - For Meta Box and JetEngine, ensure you included the correct option page slug in the path (e.g., `options.metabox.my_options.field_name`).
   - Access patterns mirror post-level custom fields. The only difference is the top-level `options` scope.
   - For arrays and complex structures, use standard loops and dot notation.
