Add .pluck() docs + boolean condition examples

--- a/docs/docs/dynamic-data/dynamic-data-modifiers/basic-modfiers.mdx
+++ b/docs/docs/dynamic-data/dynamic-data-modifiers/basic-modfiers.mdx
@@ -359,7 +359,7 @@ You can of course combine pluck with other modifiers to create more complex cond
 {/loop}`
 ```
 
-**After `.pluck()`, you can now do it in a single condition:**
+**Now with `.pluck()`, you can now do it in a single condition:**
 ```
 {#if this.categories.pluck("name").includes("ABCs")}
   true
