Add .pluck() docs + boolean condition examples

--- a/docs/docs/dynamic-data/dynamic-data-modifiers/basic-modfiers.mdx
+++ b/docs/docs/dynamic-data/dynamic-data-modifiers/basic-modfiers.mdx
@@ -317,7 +317,8 @@ The `.toBool()` method normalizes common truthy/falsey inputs into a strict bool
 ### `.pluck()`
 **Returns:** array
 
-The `.pluck()` method extracts the value at a given property path from each element in an array of objects and returns those values as a new array. As expected, paths can be nested using dot notation (e.g., `"author.name"`) to get a nested property's values. Similar to array_column() in PHP or pluck() in Laravel.
+The `.pluck()` method extracts the value at a given property path from each element in an array of objects and returns those values as a new array. Similar to `array_column()` in PHP or `pluck()` in Laravel.
+- Pluck paths can be nested using dot notation (e.g., `"author.name"`) to get a nested property's values, so `.pluck("author.name")` on an array like `[ {"author": { "name": "John" } } ]` will return `["John"]`. 
 - If the property does not exist for an element, `null` is used for that element.
 - If called on a non-array value, an empty array (`[]`) is returned.
 
