Fix anchor links on the Comparison Modifiers table (#34)
* fix: Fix formatting in tables

* Update basic-modfiers.mdx

Fix typo

* Fix anchor tags

--- a/docs/docs/dynamic-data/dynamic-data-modifiers/comparison-modifiers.mdx
+++ b/docs/docs/dynamic-data/dynamic-data-modifiers/comparison-modifiers.mdx
@@ -70,7 +70,7 @@ Making your templates **more concise and easier to maintain**:
       <td><code>.startsWith()</code></td>
       <td>
         Checks if a *string* starts with a given string.
-        <a href="#startsWith">More Details</a>
+        <a href="#startswith">More Details</a>
       </td>
       <td>
         <code>value = "Hello World!"</code><br /><br /><code>&#123;item.value.startsWith('Hel')&#125;</code> → <code>true</code>
@@ -80,7 +80,7 @@ Making your templates **more concise and easier to maintain**:
       <td><code>.endsWith()</code></td>
       <td>
         Checks if a *string* ends with a given string.<br/>
-        <a href="#endsWith">More Details</a>
+        <a href="#endswith">More Details</a>
       </td>
       <td>
         <code>value = "Hello World!"</code><br /><br /><code>&#123;item.value.endsWith('ld!')&#125;</code> → <code>true</code>
@@ -108,7 +108,7 @@ Making your templates **more concise and easier to maintain**:
         <td><code>.lessOrEqual()</code></td>
         <td>
           Checks if the current value is less than or equal to the given value.<br />
-          <a href="#lessOrEqual">More Details</a>
+          <a href="#lessorequal">More Details</a>
         </td>
         <td><code>score = 80</code><br /><br />
             <code>&#123;score.lessOrEqual(80)&#125;</code> → <code>true</code><br />
@@ -128,7 +128,7 @@ Making your templates **more concise and easier to maintain**:
         <td><code>.greaterOrEqual()</code></td>
         <td>
             Checks if the current value is greater than or equal to the given value.<br />
-            <a href="#greaterOrEqual">More Details</a>
+            <a href="#greaterorequal">More Details</a>
         </td>
         <td><code>count = 22</code><br /><br />
             <code>&#123;count.greaterOrEqual(22)&#125;</code> → <code>true</code><br />
