--- a/docs/docs/elements/html.mdx
+++ b/docs/docs/elements/html.mdx
@@ -12,7 +12,7 @@ import VersionBadge from '@site/src/components/VersionBadge/VersionBadge';
 
 The HTML Element accepts and parses raw HTML. Since Etch already has a native HTML editor that allows raw HTML, this might seem redundant. It's necessary, though, for one specific reason.
 
-The HTML Element is used in dynamic data situations (e.g. component/template authoring) where you're pulling content from that database or a component prop that contains HTML (a rich text field, for example).
+The HTML Element is used in dynamic data situations (e.g. component/template authoring) where you're pulling content from the database or a component prop that contains HTML (a rich text field, for example).
 
 ## Adding the HTML Element
 
