add image for html element to doc

--- a/docs/docs/elements/html.mdx
+++ b/docs/docs/elements/html.mdx
@@ -27,7 +27,7 @@ Since the HTML Element is most useful when working with components and templates
 
 ### Adding the Dynamic Element in the Component Editor
 
-
+![Etch HTML Element](img/etch-html-element.webp)
 
 When editing a component or template, you'll see a purple HTML element icon. Click this icon to add the HTML Element to your component.
 
