--- a/docs/docs/elements/html.mdx
+++ b/docs/docs/elements/html.mdx
@@ -25,7 +25,7 @@ There are two ways to add the HTML Element:
 Since the HTML Element is most useful when working with components and templates, we've only added it to the Elements Bar in these contexts.
 :::
 
-### Adding the Dynamic Element in the Component Editor
+### Adding the HTML Element in the Component Editor
 
 ![Etch HTML Element](img/etch-html-element.webp)
 
