feat: dialog component loop support

--- a/docs/docs/components-native/dialog.mdx
+++ b/docs/docs/components-native/dialog.mdx
@@ -113,6 +113,7 @@ On that Panel there will be a prop called `triggerSelector`, type there a .class
 | `dialogBackgroundColor` | `string` | `white` | The background color for the Dialog body, sets scoped variable inline |
 | `dialogBackdropColor` | `string` | `rgba(0, 0, 0, 0.5)` | The background color for the Dialog backdrop, sets scoped variable inline |
 | `dialogPadding` | `string` | `1em` | Padding for the Dialog |
+| `isInLoop` | `boolean` | `false` | Declares if the Dialog is being used inside a loop |
 
 #### Close Method
 :::tip
