feat: Drawer loop support

--- a/docs/docs/components-native/off-canvas.mdx
+++ b/docs/docs/components-native/off-canvas.mdx
@@ -92,3 +92,4 @@ On that Panel there will be a prop called `triggerSelector`, type there a .class
 | `drawerBackdropColor` | `string` | `rgba(0, 0, 0, 0.5)` | The background color for the Drawer backdrop, sets scoped variable inline |
 | `drawerPadding` | `string` | `1em` | Padding for the Drawer |
 | `cloneSelector` | `string` |  | Optional. A selector (.class or #id) of an element that will be cloned and moved into the drawer when opened. The element will be restored to its original position when the drawer closes. |
+| `isInLoop` | `boolean` | `false` | Declares if the Drawer is being used inside a loop |
